# langgraph_swarm

./: .env.example  .gitignore  README.md  pyproject.toml
examples/basic/: agent_handoff.py  bare_minimum.py  context_variables.py  function_calling.py  simple_loop_no_helpers.py
examples/personal_shopper/: database.py  main.py
examples/triage_agent/: agents.py  evals.py  run.py
examples/weather_agent/: agents.py  evals.py  run.py
langgraph_swarm/: __init__.py  agent.py  agent_v03.py  core.py  repl.py  router.py  router_with_v03.py  test.py  types.py  util.py
notes/: langgraph_swarm.ipynb  lg_swarm_demo.ipynb  lg_swarm_tools.ipynb
